# PlotJuggler

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  Dockerfile  ISSUES.md  README.md  build.sh  compile_commands.json  conanfile.txt  enter-msvc.ps1  help.md  main.cpp  package-release.ps1  package.xml  test.xml  test_hex.csv  vcpkg.json  websocket_client.cpp  websocket_client.h  websocket_client.ui  websocket_client_config.h  websocket_settings.ui  win32build.bat
plotjuggler_plugins/: CMakeLists.txt
plotjuggler_plugins/DataLoadBLF/: CMakeLists.txt  README.md  blf_config.cpp  blf_config.h  blf_decoder.cpp  blf_decoder.h  blf_reader.cpp  blf_reader.h  blf_series_naming.cpp  blf_series_naming.h  blf_types.h  dataload_blf.cpp  dataload_blf.h  dbc_manager.cpp  dbc_manager.h  dbcppp_decoder.cpp  dbcppp_decoder.h  dialog_blf.cpp  dialog_blf.h  dialog_blf.ui
plotjuggler_plugins/DataLoadBLF/tests/: test_blf_config.cpp  test_blf_decoder.cpp  test_blf_reader_time.cpp  test_blf_series_naming.cpp  test_dbc_manager.cpp
plotjuggler_plugins/DataLoadBLF/tools/: blf_e2e_runner.cpp
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  csv_parser.cpp  csv_parser.h  dataload_csv.cpp  dataload_csv.h  dataload_csv.ui  dataload_csv_ui.cpp  dataload_csv_ui.h  timestamp_parsing.cpp  timestamp_parsing.h
plotjuggler_plugins/DataLoadCSV/tests/: test_csv_parser.cpp
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dataload_mcap.cpp  dataload_mcap.h  dialog_mcap.h
plotjuggler_plugins/DataLoadMCAP/cmake/: FindLZ4.cmake
plotjuggler_plugins/DataLoadMCAP/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt  dataload_parquet.cpp  dataload_parquet.h
plotjuggler_plugins/DataLoadRlog/: rlog_parser.cpp  rlog_parser.hpp
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt  dataload_ulog.cpp  ulog_parser.cpp  ulog_parser.h
plotjuggler_plugins/DataLoadULog/tests/: test_ulog_parser.cpp
plotjuggler_plugins/DataLoadULog2/: CMakeLists.txt  dataload_ulog2.cpp  dataload_ulog2.h  ulog_parameters_dialog.cpp  ulog_parameters_dialog.h  ulog_parameters_dialog.ui
plotjuggler_plugins/DataStreamFoxgloveBridge/: foxglove_dialog.cpp
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt  datastream_mqtt.cpp  mqtt_client.cpp  mqtt_client.h  mqtt_dialog.cpp
plotjuggler_plugins/DataStreamPlotJugglerBridge/: websocket_client.cpp  websocket_dialog.cpp
plotjuggler_plugins/DataStreamUDP/: udp_server.cpp  udp_server.h  udp_server.ui
plotjuggler_plugins/DataStreamWebsocket/: websocket_server.cpp
plotjuggler_plugins/DataStreamWebsocketBridge/: CMakeLists.txt  README.md  websocket_client.cpp  websocket_client.h  websocket_client.ui  websocket_client_config.h  websocket_dialog.cpp  websocket_dialog.h
plotjuggler_plugins/DataStreamWebsocketClient/: CMakeLists.txt  websocket_client.cpp  websocket_client.h  websocket_client.ui
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt  datastream_zmq.cpp  datastream_zmq.ui
plotjuggler_plugins/DataStreamZMQ/cmake/: FindZeroMQ.cmake
plotjuggler_plugins/ParserDataTamer/: datatamer_parser.cpp
plotjuggler_plugins/ParserIDL/: CMakeLists.txt
plotjuggler_plugins/ParserMAVLink/: CMakeLists.txt  mavlink_factory.h  mavlink_parser.cpp  mavlink_parser.h
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt  error_collectors.cpp  error_collectors.h  protobuf_factory.cpp  protobuf_factory.h  protobuf_parser.cpp  protobuf_parser.h  protobuf_parser.ui
plotjuggler_plugins/ParserROS/: CMakeLists.txt  ros1_parser.cpp  ros1_parser.h  ros2_parser.cpp  ros2_parser.h  ros_parser.cpp  ros_parser.h  special_messages.cpp
plotjuggler_plugins/ParserROS/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/src/: deserializer.cpp  idl_parser.cpp  ros_message.cpp  ros_parser.cpp
plotjuggler_plugins/PluginsZcm/: config_zcm.cpp  config_zcm.h  config_zcm.ui  dataload_zcm.cpp  dataload_zcm.h  datastream_zcm.cpp  datastream_zcm.h
plotjuggler_plugins/StatePublisherCSV/: publisher_csv.cpp  publisher_csv_dialog.ui.autosave
plotjuggler_plugins/ToolboxCSV/: CMakeLists.txt  RangeSlider.cpp  RangeSlider.h  toolbox_csv.cpp  toolbox_csv.h  toolbox_csv.ui  toolbox_ui.cpp  toolbox_ui.h
plotjuggler_plugins/ToolboxLuaEditor/: lua_editor.cpp  lua_editor.h  lua_editor.ui
plotjuggler_plugins/ToolboxMosaico/: CMakeLists.txt  toolbox_mosaico.cpp  toolbox_mosaico.h
plotjuggler_plugins/ToolboxMosaico/src/cache/: local_cache.cpp  local_cache.h
plotjuggler_plugins/ToolboxMosaico/src/core/: time_format.cpp  time_format.h  types.h
plotjuggler_plugins/ToolboxMosaico/src/query/: ast.h  complete.h  edit.h  engine.h  query.h  token.h
plotjuggler_plugins/ToolboxMosaico/src/ui/: colors.h  download_stats_dialog.cpp  download_stats_dialog.h  elided_label.h  fetch_worker.cpp  fetch_worker.h  format_utils.h  main_window.cpp  main_window.h  server_history.cpp  server_history.h  theme_utils.h
plotjuggler_plugins/ToolboxMosaico/src/ui/metadata/: completer.h  (+5 more)
plotjuggler_plugins/ToolboxMosaico/tests/: CMakeLists.txt  mcap_bench.cpp  ontology_registry_test.cpp  test_tls_utils.cpp  test_upload_utils.cpp
plotjuggler_plugins/ToolboxMosaico/tests/cache/: local_cache_test.cpp
plotjuggler_plugins/ToolboxQuaternion/: quaternion_to_rpy.cpp  toolbox_quaternion.cpp  toolbox_quaternion.h
plotjuggler_plugins/VideoViewer/: CMakeLists.txt  video_dialog.cpp  video_dialog.h  video_dialog.ui  video_viewer.cpp  video_viewer.h
plugins/ControllerDataStream/: CMakeLists.txt  ControllerDataStream.cpp  ControllerDataStream.h  ControllerStreamUARTDecoder.cpp  ControllerStreamUARTDecoder.h
plugins/DataLoadCAN/: CMakeLists.txt  dataload_can.cpp
plugins/DataLoadRlog/: CMakeLists.txt  rlog_parser.cpp
plugins/DataStreamCereal/: CMakeLists.txt  datastream_cereal.cpp  datastream_cereal.h  test_publisher.py
plugins/RosbridgeDataStream/: CMakeLists.txt  qwsdialog.cpp  qwsdialog.h  rule_editing.cpp  rule_editing.h
plugins/RosbridgeDataStream/DataStreamROSWS/: datastream_ROSWS.cpp  datastream_ROSWS.h
(+264 files in other folders)
