add_subdirectory(DataLoadCSV)
add_subdirectory(DataLoadBLF)
add_subdirectory(DataLoadMCAP)
add_subdirectory(DataLoadParquet)
add_subdirectory(DataLoadULog)

add_subdirectory(DataStreamSample)
add_subdirectory(DataStreamWebsocket)
add_subdirectory(DataStreamUDP)
add_subdirectory(DataStreamMQTT)
add_subdirectory(DataStreamZMQ)
add_subdirectory(DataStreamFoxgloveBridge)
add_subdirectory(DataStreamPlotJugglerBridge)

add_subdirectory(StatePublisherCSV)
add_subdirectory(VideoViewer)

add_subdirectory(ToolboxQuaternion)
add_subdirectory(ToolboxFFT)
add_subdirectory(ToolboxLuaEditor)

if(DEFINED PJ_ENABLE_PARSER_PROTOBUF AND NOT PJ_ENABLE_PARSER_PROTOBUF)
  message(STATUS "ParserProtobuf plugin disabled (PJ_ENABLE_PARSER_PROTOBUF=OFF)")
else()
  add_subdirectory(ParserProtobuf)
endif()
add_subdirectory(ParserROS)
add_subdirectory(ParserDataTamer)
add_subdirectory(ParserLineInflux)

add_subdirectory(PluginsZcm)
